html is actually an html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Work in progress!
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>idko projects</title>
+	</head>
+	<body>
+		<header></header>
+		<main></main>
+	</body>
+</html>
