now its a gradient generator

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>idko projects</title>
+		
+		<link rel="stylesheet" href="style.css">
+
+		<script defer src="random.js"></script>
+		<script defer src="background.js"></script>
 	</head>
 	<body>
-		<header></header>
-		<main></main>
+		<div id="loadingScreen" hidden>
+			Doing things...
+		</div>
+		<div id="contentScreen">
+			<header>
+				
+			</header>
+			<main></main>
+		</div>
 	</body>
 </html>
