page now has something

--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
 		</div>
 		<div id="contentScreen">
 			<header>
-				
+				<div>Welcome to</div>
+				<h1>idko's projects</h1>
+				<div class="header-tooltip"><small><i><b>Tip:</b> Right-click a project to see details</i></small></div>
 			</header>
-			<main></main>
+			<div class="container">
+				<main>
+					<section>
+						<div class="h2-container-container">
+							<div class="h2-container">
+								<h2>Projects</h2>
+							</div>
+						</div>
+					</section>
+				</main>
+			</div>
 		</div>
 	</body>
 </html>
