modals fully working!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>idko projects</title>
 		
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="dialog.css">
 
 		<script defer src="js/random.js"></script>
 		<script defer src="js/background.js"></script>
@@ -41,7 +42,20 @@
 		</div>
 		<!--Windowses-->
 		<dialog id="modal-mdview">
-
+			<header>
+				md-view
+				<a class="closemodal" alt="close button" title="Close" modalparent="modal-mdview"></a>
+			</header>
+			<main>
+				<p>md-view is a markdown reader for the browser.</p>
+				<p>I made it because i couldn't find a markdown reader that could save pdfs, wasn't ugly, let me change the font and wasn't a pain to install.</p>
+			</main>
+			<footer>
+				<div>
+					<a class="github-link" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
+					<a class="project-link" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
+				</div>
+			</footer>
 		</dialog>
 	</body>
 </html>
