close by clicking outside

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header>
 				<div>Welcome to</div>
 				<h1>idko's projects</h1>
-				<div class="header-tooltip"><small><i><b>Tip:</b> Right-click a project to see details</i></small></div>
+				<div class="header-tooltip"><small><i><b>Tip:</b> Right-click (or hold) a project to see details</i></small></div>
 			</header>
 			<div class="container">
 				<main>
@@ -42,20 +42,23 @@
 		</div>
 		<!--Windowses-->
 		<dialog id="modal-mdview">
-			<header>
-				md-view
-				<a class="closemodal" alt="close button" title="Close" modalparent="modal-mdview"></a>
-			</header>
-			<main>
-				<p>md-view is a markdown reader for the browser.</p>
-				<p>I made it because i couldn't find a markdown reader that could save pdfs, wasn't ugly, let me change the font and wasn't a pain to install.</p>
-			</main>
-			<footer>
-				<div>
-					<a class="github-link" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
-					<a class="project-link" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
-				</div>
-			</footer>
+			<div>
+				<header>
+					md-view
+					<a class="closemodal" alt="close button" title="Close" modalparent="modal-mdview"></a>
+				</header>
+				<main>
+					<p>md-view is a markdown reader for the browser.</p>
+					<p>I made it because i couldn't find a markdown reader that could save pdfs, wasn't ugly, let me change the font and wasn't a pain to install.</p>
+					<p>It's just a simple reader, it can't edit files, and it isn't full compatible with markdown (may not even be markdown compliant, idk), but for simple .md files, it mostly works.</p>
+				</main>
+				<footer>
+					<div>
+						<a class="github-link" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="project-link" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
+					</div>
+				</footer>
+			</div>
 		</dialog>
 	</body>
 </html>
