colon-three-bot

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 									<img src="img/unidad.svg" class="card" right-click="modal-unidad" alt="Unidad" title="Unidad: LAN cards game">
 								</a>
 							</article>
+							<article>
+								<a href="https://github.com/idko2004/colon-three-bot" target="_blank">
+									<img src="img/colon-three-bot.svg" class="card" right-click="modal-colonthreebot" alt="Unidad" title="colon-three-bot: A Discord bot that does :3">
+								</a>
+							</article>
 						</div>
 					</section>
 				</main>
@@ -87,6 +92,28 @@
 				</footer>
 			</div>
 		</dialog>
+
+		<dialog id="modal-colonthreebot">
+			<div>
+				<header>
+					:3 bot
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-colonthreebot"></a>
+				</header>
+				<main>
+					<p>colon-three-bot is a Discord bot that does :3.</p>
+					<p>It will reply with certain emoticons if it finds them in a message.</p>
+					<p>Some of them are:<br>:3	:D  :)  c:  UwU  OwO  :o  :p</p>
+					<p>There are also sad ones:<br>:(  :c  :'(  D:  UnU  TwT</p>
+					<p>For setting it up you will need to create a Discord bot (There are steps are detailed in the GitHub page).</p>
+				</main>
+				<footer>
+					<div>
+						<a class="github-link light-icon" href="https://github.com/idko2004/colon-three-bot" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
+				</footer>
+			</div>
+		</dialog>
+
 
 	</body>
 </html>
