fixed the emoticons

--- a/index.html
+++ b/index.html
@@ -102,8 +102,24 @@
 				<main>
 					<p>colon-three-bot is a Discord bot that does :3.</p>
 					<p>It will reply with certain emoticons if it finds them in a message.</p>
-					<p>Some of them are:<br>:3	:D  :)  c:  UwU  OwO  :o  :p</p>
-					<p>There are also sad ones:<br>:(  :c  :'(  D:  UnU  TwT</p>
+					<p>Some of them are:<br>
+						<span class="spacer">:3</span>
+						<span class="spacer">:D</span>
+						<span class="spacer">:)</span>
+						<span class="spacer">c:</span>
+						<span class="spacer">UwU</span>
+						<span class="spacer">OwO</span>
+						<span class="spacer">:o</span>
+						<span class="spacer">:p</span>
+					</p>
+					<p>There are also sad ones:<br>
+						<span class="spacer">:(</span>
+						<span class="spacer">:c</span>
+						<span class="spacer">:'(</span>
+						<span class="spacer">D:</span>
+						<span class="spacer">UnU</span>
+						<span class="spacer">TwT</span>
+					</p>
 					<p>For setting it up you will need to create a Discord bot (There are steps are detailed in the GitHub page).</p>
 				</main>
 				<footer>
