--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 					<p>md-view is a markdown reader for the browser.</p>
 					<p>I made it because i couldn't find a markdown reader that could save pdfs, wasn't ugly, let me change the font and wasn't a pain to install.</p>
 					<p>It's just a simple reader, it can't edit files, and it isn't full compatible with markdown (may not even be markdown compliant, idk), but for simple .md files, it mostly works.</p>
+					<div>
+						<b>Made with the help of:</b>
+						<div class="madewith-icons">
+							<img src="img/js.svg" alt="Javascript logo" title="Javascript">
+							<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
+						</div>
+					</div>
 				</main>
 				<footer>
 					<div>
@@ -79,7 +86,7 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-unidad"></a>
 				</header>
 				<main>
-					<p>Unidad is a cards game similar to UNO that you can play with others in your local network.</p>
+					<p>Unidad is a cards game similar to UNO with a very dumb name that you can play with others in your local network.</p>
 					<p>Do you know how nobody plays UNO with the official rules? Well, this is basically UNO but with the rules I'm used to play with (although you surely may know some of them).</p>
 					<p>Also, there are <i>more special cards</i>, these are new cards from this game.</p>
 					<p>To play, you need to iniciate the server (works great on termux), the server will tell you your ip address in your local network, access to that ip from your favorite web browser, and tell your friend to do the same. Now you can play together!!!</p>
