--- a/index.html
+++ b/index.html
@@ -88,7 +88,28 @@
 					<section>
 						<button class="btn-showthings" id="showabandonedprojects">Show abandoned projects</button>
 					</section>
+					<section>
+
+					</section>
 				</main>
+			</div>
+			<div class="h2-container-container">
+				<div class="h2-container">
+					<h2>Music Recomendation</h2>
+				</div>
+			</div>
+			<div class="musiccontainercontainer">
+				<div class="musiccontainer">
+					<div style="grid-column: 1; grid-row: 1; --music-cover:url('img/music/hawaiipartiijpg');" class="musiccover" alt="Cover of the recomended album"></div>
+					<div style="grid-column: 2; grid-row: 1;">
+						<div class="musictitle"><a id="amusictitle" href="">Some music I really like</a></div>
+						<div class="musicalbum"><a id="amusicalbum" href="">Some album I really like</a></div>
+						<div class="musicartist"><a id="amusicartist" href="">Some artist I really like</a></div>
+					</div>
+					<div style="grid-column: 1/4; grid-row: 2;" class="musiclyric" id="musiclyric">
+						"Some phrase in the music that I really like"
+					</div>
+				</div>
 			</div>
 		</div>
 
