--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 					<a class="closemodal dark-icon" alt="close button" title="Close" modalparent="modal-mdview"></a>
 				</header>
 				<main>
-					<p>md-view is a markdown reader for the browser.</p>
-					<p>I made it because i couldn't find a markdown reader that could save pdfs, wasn't ugly, let me change the font and wasn't a pain to install.</p>
-					<p>It's just a simple reader, it can't edit files, and it isn't full compatible with markdown (may not even be markdown compliant, idk), but for simple .md files, it mostly works.</p>
+					<p class="txt" txt="mmdview1">hewo :3</p>
+					<p class="txt" txt="mmdview2">hewo :3</p>
+					<p class="txt" txt="mmdview3">hewo :3</p>
 					<div>
-						<b>Made with the help of:</b>
+						<b class="txt" txt="madewithhelp">hewo :3</b>
 						<div class="madewith-icons">
 							<img src="img/js.svg" alt="Javascript logo" title="Javascript">
 							<img src="img/Google_Fonts_icon.svg" alt="Google Fonts logo" title="Google Fonts">
