--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 		<script defer src="js/random.js"></script>
 		<script defer src="js/background.js"></script>
-		<script defer src="js/language.js"></script>
 		<script defer src="js/modals.js"></script>
+		<script defer src="js/language.js"></script>
 		<script defer src="js/music.js"></script>
 	</head>
 	<body>
@@ -37,6 +37,7 @@
 					</div>
 				</noscript>
 			</header>
+			<button id="langbtn" class="txt" txt="chlang" hidden>Change language</button>
 			<div class="container">
 				<main>
 					<section>
@@ -126,6 +127,18 @@
 
 
 <!--Windowses-->
+		<dialog id="modal-language">
+			<div>
+				<header>
+					<span class="txt" txt="chlang">Change language</span>
+					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-language"></a>
+				</header>
+				<main>
+					<div><button class="langbtn" onclick="setLanguageBtn('es')">Español</button></div>
+					<div><button class="langbtn" onclick="setLanguageBtn('en')">English</button></div>
+				</main>
+			</div>
+		</dialog>
 		<dialog id="modal-mdview">
 			<div>
 				<header>
@@ -133,6 +146,10 @@
 					<a class="closemodal dark-icon" alt="close button" title="Close" modalparent="modal-mdview"></a>
 				</header>
 				<main>
+					<div class="projecticons">
+						<a class="github-link dark-icon" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
+						<a class="project-link dark-icon" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
+					</div>
 					<p class="txt" txt="mmdview1">hewo :3</p>
 					<p class="txt" txt="mmdview2">hewo :3</p>
 					<p class="txt" txt="mmdview3">hewo :3</p>
@@ -144,12 +161,6 @@
 						</div>
 					</div>
 				</main>
-				<footer>
-					<div>
-						<a class="github-link dark-icon" href="https://github.com/idko2004/md-view" target="_blank" alt="github logo" title="View the source code"></a>
-						<a class="project-link dark-icon" href="http://idko.infinityfreeapp.com/md-view" target="_blank" alt="go to project" title="Try it out"></a>
-					</div>
-				</footer>
 			</div>
 		</dialog>
 
@@ -160,17 +171,19 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-unidad"></a>
 				</header>
 				<main>
-					<p>Unidad is a cards game similar to UNO with a very dumb name that you can play with others in your local network.</p>
-					<p>Do you know how nobody plays UNO with the official rules? Well, this is basically UNO but with the rules I'm used to play with (although you surely may know some of them).</p>
-					<p>Also, there are <i>more special cards</i>, these are new cards from this game.</p>
-					<p>To play, you need to iniciate the server (works great on termux), the server will tell you your ip address in your local network, access to that ip from your favorite web browser, and tell your friend to do the same. Now you can play together!!!</p>
-				</main>
-				<footer>
-					<div>
+					<div class="projecticons">
 						<a class="github-link light-icon" href="https://github.com/idko2004/unidad" target="_blank" alt="github logo" title="View the source code"></a>
 						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/unidad" target="_blank" alt="go to project" title="Try it out"></a>
 					</div>
-				</footer>
+					<p class="txt" txt="munidad1">hewo :3</p>
+					<p class="txt" txt="munidad2">hewo :3</p>
+					<p>
+						<span class="txt" txt="munidad3">hewo :3</span>
+						<i class="txt" txt="munidad4">hewo :3</i>
+						<span class="txt" txt="munidad5">hewo :3</span>
+					</p>
+					<p class="txt" txt="munidad6">hewo :3</p>
+				</main>
 			</div>
 		</dialog>
 
@@ -181,6 +194,9 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-colonthreebot"></a>
 				</header>
 				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/colon-three-bot" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
 					<p>colon-three-bot is a Discord bot that does :3.</p>
 					<p>It will reply with certain emoticons if it finds them in a message.</p>
 					<p>Some of them are:<br>
@@ -203,11 +219,6 @@
 					</p>
 					<p>For setting it up you will need to create a Discord bot (There are steps are detailed in the GitHub page).</p>
 				</main>
-				<footer>
-					<div>
-						<a class="github-link light-icon" href="https://github.com/idko2004/colon-three-bot" target="_blank" alt="github logo" title="View the source code"></a>
-					</div>
-				</footer>
 			</div>
 		</dialog>
 
@@ -218,6 +229,9 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-secretsanta"></a>
 				</header>
 				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/secret-santa" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
 					<p>Secret santa is a Discord bot for doing a... secret santa.</p>
 					<p>
 						The way it works is:
@@ -230,11 +244,6 @@
 						</ul>
 					</p>
 				</main>
-				<footer>
-					<div>
-						<a class="github-link light-icon" href="https://github.com/idko2004/secret-santa" target="_blank" alt="github logo" title="View the source code"></a>
-					</div>
-				</footer>
 			</div>
 		</dialog>
 
@@ -245,15 +254,13 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-dotmatrix"></a>
 				</header>
 				<main>
-					<p>Dot Matrix is just a simple webpage that simulates a Dot matrix display billboard.</p>
-					<p>I made it because i thought it would be funny.</p>
-				</main>
-				<footer>
-					<div>
+					<div class="projecticons">
 						<a class="github-link light-icon" href="https://github.com/idko2004/dot-matrix" target="_blank" alt="github logo" title="View the source code"></a>
 						<a class="project-link light-icon" href="http://idko.infinityfreeapp.com/dot-matrix" target="_blank" alt="go to project" title="Try it out"></a>
 					</div>
-				</footer>
+					<p>Dot Matrix is just a simple webpage that simulates a Dot matrix display billboard.</p>
+					<p>I made it because i thought it would be funny.</p>
+				</main>
 			</div>
 		</dialog>
 
@@ -264,15 +271,13 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-convertmusic"></a>
 				</header>
 				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
 					<p>convertMusic is a little node.js program that converts files in a folder to another format using ffmpeg.</p>
 					<p>Like, for example, imagine that your car has a cheap stereo system that only works with mp3 files, but all your music files are in opus, instead of converting them one by one with ffmpeg, you can just use this program.</p>
 					<p>This program is basically a glorified way of running "ffmpeg -i input.opus output.mp3", I mean, that's literally what it does, but for each file in a folder.</p>
 				</main>
-				<footer>
-					<div>
-						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
-					</div>
-				</footer>
 			</div>
 		</dialog>
 
@@ -283,15 +288,13 @@
 					<a class="closemodal light-icon" alt="close button" title="Close" modalparent="modal-convertmusic"></a>
 				</header>
 				<main>
+					<div class="projecticons">
+						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
+					</div>
 					<p>random-c is my first program written in the C language<span class="spacer">c:</span></p>
 					<p>It chooses one of the options you give in the arguments. Or a random number if you use the -d flag.</p>
 					<p>Can choose from a file with the -f flag, or be piped to another program with the -p flag.</p>
 				</main>
-				<footer>
-					<div>
-						<a class="github-link light-icon" href="https://github.com/idko2004/convertMusic" target="_blank" alt="github logo" title="View the source code"></a>
-					</div>
-				</footer>
 			</div>
 		</dialog>
 
