--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>idko projects</title>
+		<title class="txt" txt="windowtitle">idko projects</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
