--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" href="dialog.css">
 		<link rel="stylesheet" href="commonassets/fonts.css">
 
+		<link rel="icon" type="image/x-icon" href="img/favicon.jpg">
+
 		<script defer src="js/random.js"></script>
 		<script defer src="js/background.js"></script>
 		<script defer src="js/modals.js"></script>
