traté de hacer prefetch de los assets pero parece que no funciona

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 		<script defer src="js/modals.js"></script>
 		<script defer src="js/language.js"></script>
 		<script defer src="js/music.js"></script>
+
+		<link rel="prefetch" href="commonassets/icons/github-mark/github-mark.svg">
+		<link rel="prefetch" href="commonassets/icons/svgrepo/outside-page-no-padding.svg">
+		<link rel="prefetch" href="commonassets/fonts/TiltWarp-Regular-VariableFont.ttf">
+		<link rel="prefetch" href="commonassets/icons/svgrepo/close-clean-no-padding.svg">
+		<link rel="prefetch" href="commonassets/icons/svgrepo/close-clean-no-padding-white.svg">
+		<link rel="prefetch" href="commonassets/icons/github-mark/github-mark-white.svg">
+		<link rel="prefetch" href="commonassets/icons/svgrepo/outside-page-no-padding-white.svg">
+		<link rel="prefetch" href="commonassets/fonts/NotoSans-VariableFont_wdth,wght.ttf">
+		<link rel="prefetch" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf">
+		<link rel="prefetch" href="commonassets/fonts/JetBrainsMono-VariableFont_wght.ttf">
 	</head>
 	<body>
 		<div id="contentScreen">
