responsive design in music recomendation

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 			</div>
 			<div class="musiccontainercontainer">
 				<div class="musiccontainer">
-					<div style="grid-column: 1; grid-row: 1;" id="divmusiccover" class="musiccover titletxt" titletxt="albumcover" title="Cover of the recomended album"></div>
-					<div style="grid-column: 2; grid-row: 1;">
+					<div id="divmusiccover" class="musiccover titletxt" titletxt="listenyt" alt="Cover of the recomended album"></div>
+					<div class="musicinfo">
 						<div class="musictitle"><a id="amusictitle" href="https://youtu.be/HJNxcmp5nHg" target="_blank">Something</a></div>
 						<div class="musicalbum"><a id="amusicalbum" href="https://youtu.be/LaJTDvX2yFs" target="_blank">Something</a></div>
 						<div class="musicartist"><a id="amusicartist" href="https://youtu.be/u79QHXzKq2M" target="_blank">Something</a></div>
@@ -131,7 +131,7 @@
 							</a>
 						</div>
 					</div>
-					<div style="grid-column: 1/4; grid-row: 2;" class="musiclyric" id="musiclyric">
+					<div class="musiclyric" id="musiclyric">
 						"Wooops. You have to put the CD in your computer."
 					</div>
 				</div>
