--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 				<div class="musiccontainer">
 					<div id="divmusiccover" class="musiccover titletxt" titletxt="listenyt" alt="Cover of the recomended album"></div>
 					<div class="musicinfo">
-						<div class="musictitle"><a id="amusictitle" href="https://youtu.be/HJNxcmp5nHg" target="_blank">Enemy lasagna</a></div>
-						<div class="musicalbum"><a id="amusicalbum" href="https://youtu.be/LaJTDvX2yFs" target="_blank">Robust below wax</a></div>
-						<div class="musicartist"><a id="amusicartist" href="https://youtu.be/u79QHXzKq2M" target="_blank">Semiautomatic aqua</a></div>
+						<div class="musictitle"><a id="amusictitle" href="https://www.youtube.com/shorts/K-xfVyf64lo" target="_blank">Enemy lasagna</a></div>
+						<div class="musicalbum"><a id="amusicalbum" href="https://www.youtube.com/shorts/K-xfVyf64lo" target="_blank">Robust below wax</a></div>
+						<div class="musicartist"><a id="amusicartist" href="https://www.youtube.com/shorts/K-xfVyf64lo" target="_blank">Semiautomatic aqua</a></div>
 						<div>
-							<a class="listenlink" id="listenlink" target="_blank" href="https://youtu.be/slwmJLaVrdE">
+							<a class="listenlink" id="listenlink" target="_blank" href="https://www.youtube.com/shorts/K-xfVyf64lo">
 								<img src="commonassets/icons/svgrepo/play-clean-white.svg" class="alttxt titletxt" alttxt="playicon" titletxt="listenyt" alt="Play icon" title="Listen in Youtube Music">
 							</a>
 						</div>
